<resources>
    <string name="app_name">ParentsMeet</string>
    <string name="appname">Parents Meet</string>
    <string name="font_regular" translatable="false">fonts/segoeui.ttf</string>
    <string name="font_bold" translatable="false">fonts/segoeui_bold.ttf</string>
    <string name="font_bold_italic" translatable="false">fonts/segoeui_bold_italic.ttf</string>
    <string name="font_italic" translatable="false">fonts/segoeui_italic.ttf</string>
    <string name="input_field_icon" translatable="false">Input Field Icon</string>
    <string name="input_field_secondary_icon" translatable="false">Input Field Secondary Icon</string>
    <string name="email_id">Email Address</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth \n (DD/MM/YYYY)</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="retyp_password">Re-Type Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="cellphone">Cellphone</string>
    <string name="no_account_create_new_account">No Account? <font color='#0C6877'> Signup </font></string>

    <string name="already_have_an_account">Already Have an Account?<font color='#0C6877'> Sign in</font></string>
    <string name="forget_your_password">Forgot Password?</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or</string>
    <string name="keep_login">Keep me logged in</string>

    <string name="err_invalid_code">Please enter valid Code</string>
    <string name="err_invalid_first_name">Please enter valid First Name</string>
    <string name="err_invalid_last_name">Please enter valid Last Name</string>
    <string name="err_invalid_dob">Please enter valid Date of Birth</string>
    <string name="err_invalid_email_id">Please enter valid Email Id</string>
    <string name="err_invalid_email_phone">Please enter valid Email Id or Phone Number</string>
    <string name="err_invalid_cellphone">Please enter valid Cellphone</string>
    <string name="err_invalid_password">Please enter valid password</string>
    <string name="err_invalid_retyp_password">Password should match with Re-type password</string>
    <string name="forgot_pass_description">Enter cellphone number or email to recieve a code to reset your password</string>
    <string name="code">Code</string>
    <string name="reset_pass">Reset Password</string>
    <string name="create_account">Create An Account</string>
    <string name="verify_account">Verify your account</string>
    <string name="i_am">I Am</string>
    <string name="mom">Mom</string>
    <string name="dad">Dad</string>
    <string name="Uncle">uncle</string>
    <string name="Aunty">aunt</string>
    <string name="GrandFather">GrandFather</string>
    <string name="GrandMother">GrandMother</string>
    <string name="grandFather">grandfather</string>
    <string name="grandMother">grandmother</string>
    <string name="other">Other</string>
    <string name="number">Number</string>
    <string name="submit">Submit</string>
    <string name="special_character">Special character </string>
    <string name="uppercase_letter">Uppercase Letter </string>
    <string name="lowercase_letter">Lowercase Letter </string>
    <string name="pwd_must_be">Password must be 8 character or more and include</string>
    <string name="pwd_must">Password must be 8 character or more and</string>
    <string name="verify_label">For added safety we need to verify your account. Please enter the code we have texted you below </string>

    <string-array name="Others">
        <item>Other</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>GrandFather</item>
        <item>GrandMother</item>
    </string-array>

    <string-array name="Gender">
        <item>She</item>
        <item>Her</item>
        <item>Hers</item>
        <item>He</item>
        <item>Him</item>
        <item>His</item>
        <item>They</item>
        <item>Them</item>
        <item>Theirs</item>
        <item>Ze</item>
        <item>Hirs</item>
    </string-array>

    <string-array name="Age">
        <item>Under 1</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="AgeRange">
            <item>4 yrs</item>
            <item>5 yrs</item>
            <item>6 yrs</item>
            <item>7 yrs</item>
            <item>8 yrs</item>

    </string-array>
    <string-array name="Grades">
        <item>Pre-K</item>
        <item>K</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
    </string-array>
    <string name="enter_code">Enter Code</string>
    <string name="code_description">For added safety, we need to verify your account. Please enter the code we have texted you below.</string>
    <string name="check_code">Check your text message for the code and enter below your reset password.</string>
    <string name="reset">Reset</string>

    <string name="add_new_kid">Add a new kid</string>
    <string name="mommy">Mommy</string>
    <string name="kids">Kids</string>
    <string name="meet">Meet</string>
    <string name="calender">Calendar</string>
    <string name="ic_messages">Messages</string>
    <string name="connections">Please use your real name as we would like to help you create real connections.</string>
    <string name="profession">Profession</string>
    <string name="save">Save</string>
    <string name="lunch_date">Lunch Date</string>
    <string name="dinner_date">Dinner Date</string>
    <string name="brunch">Brunch</string>
    <string name="park_trip">Park trip</string>
    <string name="parent_interst">Parent Interests</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="gender_pronouns">Gender Pronouns</string>
    <string name="grade">Grade</string>
    <string name="add_kid_btn">Add Kid</string>
    <string name="preferrences">Preferences</string>
    <string name="games">Games</string>
    <string name="activities">Activities</string>
    <string name="need">Special Needs</string>
    <string name="tag">Tag</string>
    <string name="settings">Settings</string>
    <string name="display_profile">Display Profile</string>
    <string name="add_tag">Add a Tag</string>
    <string name="cancel">Cancel</string>
    <string name="add_tag_error">Please enter a tag</string>
    <string name="saved">Saved Successfully.</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="search_forum">Search Forum</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write a comment</string>
    <string name="comment_sent">Comment Added Successfully!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blogs">Blogs</string>
    <string name="job">Job</string>
    <string name="form">Forum</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="applied">Applied</string>
    <string name="saved_job">Saved</string>
    <string name="apply_now">Apply Now</string>
    <string name="all">All</string>
    <string name="job_type">Job Type</string>
    <string name="fullTime">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="contract">Contract</string>
    <string name="all_type">All  Type</string>
    <string name="location_preference">Location Preference</string>
    <string name="in_person">In Person</string>
    <string name="remote">Remote</string>
    <string name="no_pref">No Preference</string>
    <string name="hybrid">Hybrid</string>
    <string name="salary">Salary</string>
    <string name="education">Education Requirement</string>
    <string name="job_category">Job Category</string>
    <string name="experience">Experience</string>
    <string name="fifty">$50,000+</string>
    <string name="sixty">$60,000+</string>
    <string name="seventyfive">$75,000+</string>
    <string name="eightyfive">$85,000+</string>
    <string name="nintyfiv">$95,000+</string>
    <string name="lakh">$100,000+</string>
    <string name="high_school">High School Degree</string>
    <string name="assosiates">Associate\'s Degree</string>
    <string name="all_educ">All Education Levels</string>
    <string name="master">Master\'s Degree</string>
    <string name="bachelor">Bachelor\'s Degree</string>
    <string name="market">Marketing, Advertising &amp; Public Relations</string>
    <string name="sales">Sales, Retail &amp; Customer Service></string>
    <string name="tech">Technology</string>
    <string name="administration">Administrative &amp; Business Operations</string>
    <string name="finan">Finance &amp; Accounting</string>
    <string name="all_job">All Job Categories</string>
    <string name="entry_level">Entry Level</string>
    <string name="mid_level">Mid Level</string>
    <string name="senior">Senior Level</string>
    <string name="all_experience">All Experience</string>
    <string name="show_result">Show Result</string>
    <string name="filters">Filters</string>
    <string name="filter_pref">Filter Preferences</string>
    <string name="location_range">Location Range | Distance</string>
    <string name="activity_interest">Activities/Interests</string>
    <string name="swim">Swimming</string>
    <string name="draw">Drawing</string>
    <string name="read">Reading</string>
    <string name="playdate">Playdate</string>
    <string name="studyDate">Studydate</string>
    <string name="age_range">Age Range</string>
    <string name="availability">Availablilty</string>
    <string name="six_nin">6 AM - 9 AM</string>
    <string name="nin_twelve">9 AM - 12 PM</string>
    <string name="twelv_three">12 PM - 3 PM</string>
    <string name="three_six">3 PM - 6 PM</string>
    <string name="six_nin_pm">6 PM - 9 PM</string>
    <string name="add_game">Add a game</string>
    <string name="add_activity">Add an activity</string>
    <string name="add_need">Add a special need</string>
    <string name="degree_c">\u2103</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip Code</string>
    <string name="country">Country</string>
</resources>