<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_whiterect"
    android:padding="@dimen/_10sp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:fontFamily="@string/font_bold"
        android:gravity="center"
        android:text="@string/add_tag"
        android:textAllCaps="false"
        android:textColor="@color/green_1"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/code_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:hint="@string/tag"
        android:background="@drawable/grey_rect"
        android:gravity="center"
        android:fontFamily="@string/font_regular"
        android:paddingHorizontal="@dimen/_15dp"
        android:textColor="@color/black_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_emoji"
        >

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35dp"
            android:layout_margin="@dimen/_15dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:background="@drawable/background_gradient"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_submit"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35dp"
            android:layout_margin="@dimen/_15dp"
            android:background="@drawable/background_gradient"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_skip"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>