<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/background_gradient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="@dimen/_400dp"/>
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_300dp"
            android:layout_height="@dimen/_200dp"
            android:layout_marginTop="@dimen/main_logo_top_margin"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/ten_dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_logo_bottom_margin"
            android:background="@drawable/background_top_curve_white_filled_with_border"
            android:orientation="vertical"
            android:paddingStart="@dimen/twenty_six_dp"
            android:paddingEnd="@dimen/twenty_six_dp"
            android:paddingBottom="@dimen/dp_sixty_four"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black_1"
                android:text="@string/create_account" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/i_am" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_mom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/mom" />

                <ImageView
                    android:id="@+id/iv_dad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/dad" />

                <ImageView
                    android:id="@+id/iv_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/other" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/gray_2"
                    android:text="@string/mom" />

                <TextView
                    android:id="@+id/tv_dad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/gray_2"
                    android:text="@string/dad" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:id="@+id/spinner_layout"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Spinner
                        android:id="@+id/spinner_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/iv_down"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/other" />

                    <ImageView
                        android:id="@+id/iv_down"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/spin" />
                </RelativeLayout>


            </LinearLayout>

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/edt_f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                android:src="@drawable/ic_user"
                app:label="@string/first_name" />

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/edt_l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPersonName"
                android:src="@drawable/ic_user"
                app:label="@string/last_name" />

            <EditText
                android:id="@+id/edt_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#E3E3E3"
                android:drawableLeft="@drawable/calendar"
                android:drawablePadding="10dp"
                android:focusable="false"
                android:hint="@string/dob"
                android:textColor="@color/silver_5" />

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:src="@drawable/ic_email"
                app:label="@string/email_id" />

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/edt_cellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:src="@drawable/cellphone"
                app:label="@string/cellphone" />

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:src="@drawable/ic_lock"
                app:label="@string/password"
                app:password="true" />

            <com.logicsquare.parentsmeet.views.VInputField
                android:id="@+id/edt_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:src="@drawable/ic_lock"
                app:label="@string/confirm_password"
                app:password="true" />

            <com.logicsquare.parentsmeet.views.VTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/pwd_must_be"
                android:textSize="@dimen/sixteen_sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="15dp"
                    android:text="@string/uppercase_letter"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="15dp"
                    android:text="@string/number"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="15dp"
                    android:text="@string/lowercase_letter"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/dot"
                    android:drawablePadding="15dp"
                    android:text="@string/special_character"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <com.logicsquare.parentsmeet.views.VButton
                android:id="@+id/btn_sign_in"
                style="@style/PrimaryButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/create_account_btn"
                tools:ignore="TextContrastCheck" />


            <com.logicsquare.parentsmeet.views.VTextView
                android:id="@+id/tvNoAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:backgroundTint="@color/border_1"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/sixteen_sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>