<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/thirty_two_dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivPrimaryIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        tools:src="@drawable/ic_user"
        android:contentDescription="@string/input_field_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.logicsquare.parentsmeet.views.VEditText
        android:id="@+id/etInput"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/fourteen_dp"
        android:background="@null"
        android:paddingBottom="@dimen/ten_dp"
        tools:text="Harry"
        android:singleLine="true"
        android:textColor="@color/gray_3"
        android:textColorHint="@color/gray_2"
        app:layout_constraintEnd_toEndOf="@+id/ivSecondaryIcon"
        app:layout_constraintStart_toEndOf="@+id/ivPrimaryIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:myFont="@string/font_regular"/>

    <TextView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/one_dp"
        android:background="@color/light_silver_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivSecondaryIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/input_field_secondary_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>